--- a/14_8_CompanyInfo/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/14_8_CompanyInfo/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -7,55 +7,55 @@
     }
 }
 <div id="page">
-   
+
     <footer>
         <!-- BEGIN INFORMATIVE FOOTER -->
         <div class="footer-inner">
             @*<div class="newsletter-row">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col">
-                            <!-- Footer Payment Link -->
-                            <div class="payment-accept">
-                                <div>
-                                    <a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">
-                                        <img src="/assets/images/payment-1.png" alt="payment1"> 
-                                    </a>
-                                    <a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">
-                                        <img src="/assets/images/payment-2.png" alt="payment2">
-                                    </a>
-                                    <a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">
-                                        <img src="/assets/images/payment-3.png" alt="payment3"> 
-                                    </a>
-                                    <a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">
-                                        <img src="/assets/images/payment-4.png" alt="payment4">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Footer Newsletter -->
-                        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 col1">
-                            <div class="newsletter-wrap">
-                                <h4>Đăng ký</h4>
-                                <div id="newsletter-validate-detail1">
-                                    <div id="container_form_news">
-                                        <div id="container_form_news2">
-                                            <input type="text" name="email" id="newsletter1" title="Nhận thông tin khuyến mại." class="input-text required-entry validate-email" placeholder="Nhập địa chỉ email của bạn...">
-                                            <button type="submit" title="Đăng ký" class="button subscribe"><span>Đăng ký</span></button>
-                                        </div>
-                                        <!--container_form_news2-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col">
+                                <!-- Footer Payment Link -->
+                                <div class="payment-accept">
+                                    <div>
+                                        <a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">
+                                            <img src="/assets/images/payment-1.png" alt="payment1">
+                                        </a>
+                                        <a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">
+                                            <img src="/assets/images/payment-2.png" alt="payment2">
+                                        </a>
+                                        <a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">
+                                            <img src="/assets/images/payment-3.png" alt="payment3">
+                                        </a>
+                                        <a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">
+                                            <img src="/assets/images/payment-4.png" alt="payment4">
+                                        </a>
                                     </div>
-                                    <!--container_form_news-->
                                 </div>
-
                             </div>
-                            <!--newsletter-wrap-->
-                        </div>
+                            <!-- Footer Newsletter -->
+                            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 col1">
+                                <div class="newsletter-wrap">
+                                    <h4>Đăng ký</h4>
+                                    <div id="newsletter-validate-detail1">
+                                        <div id="container_form_news">
+                                            <div id="container_form_news2">
+                                                <input type="text" name="email" id="newsletter1" title="Nhận thông tin khuyến mại." class="input-text required-entry validate-email" placeholder="Nhập địa chỉ email của bạn...">
+                                                <button type="submit" title="Đăng ký" class="button subscribe"><span>Đăng ký</span></button>
+                                            </div>
+                                            <!--container_form_news2-->
+                                        </div>
+                                        <!--container_form_news-->
+                                    </div>
 
+                                </div>
+                                <!--newsletter-wrap-->
+                            </div>
+
+                        </div>
                     </div>
-                </div>
-                <!--footer-column-last-->
-            </div>*@
+                    <!--footer-column-last-->
+                </div>*@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12 col-lg-4">
@@ -113,28 +113,27 @@
                         <div class="footer-column">
                             <h4>Bản đồ </h4>
                             <a href="https://goo.gl/maps/cPSqZaF8p319hVrZ8" target="_blank">
-                                <img src="https://cdn.anpero.com/images/43/82019/12019080200473089.png" style="width:100%"/>
+                                <img src="https://cdn.anpero.com/images/43/82019/12019080200473089.png" style="width:100%" />
                             </a>
                             @*<ul class="links">*@
 
-                                @*@if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
-            {
-                foreach (var item in commonInfo.ProductCategoryList)
-                {
+                            @*@if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
+                                {
+                                    foreach (var item in commonInfo.ProductCategoryList)
+                                    {
 
-                    <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)" alter="@item.Name">@item.Name</a></li>
-                }
-            }*@
+                                        <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)" alter="@item.Name">@item.Name</a></li>
+                                    }
+                                }*@
                             @*</ul>*@
                         </div>
                         <div class="footer-column">
                             @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                             {
 
-                                <div class="fb-page"
-                                     data-tabs="messages"
+                                <div class="fb-page"                                   
                                      data-href="@Html.Raw(commonInfo.FaceBookLink)"
-                                     data-height="310"
+                                     data-height="330"
                                      data-hide-cover="false">
                                 </div>
                             }
@@ -155,9 +154,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-xs-12 coppyright">© 2016 @commonInfo.Name. All Rights Reserved. Power by <a href="https://anpero.com" title="thiết kế web quản lý bán hàng, thiết kế web chuyên nghiệp, thiết kế web giá rẻ">Anpero</a></div>
-                </div>                
-            </div>            
-        </div>        
+                </div>
+            </div>
+        </div>
     </footer>
 </div>
 <div id="mobile-menu">
@@ -165,107 +164,56 @@
         <li>
             <div class="home"><a href="/"><i class="icon-home"></i>Trang chủ</a> </div>
         </li>
-        <li>
-            <a href="/about">Giới thiệu</a>
-        </li>
-        <li>
-            <a href="#">Sản phẩm</a>
-            <ul>
-                @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
-                {
-                    foreach (var item in commonInfo.ProductCategoryList)
-                    {
-                        if (item.ChildCategory != null && item.ChildCategory.Length == 0)
-                        {
-                            <li>
-                                <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)"><span>@item.Name‎</span></a>
-                            </li>
-                        }
-                        else
-                        {
-                            <li>
-                                <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name, item.Id)"><span>@item.Name</span> </a>
-                                <ul>
-                                    @foreach (var chidItem in item.ChildCategory)
-                                    {
-                                        <li><a href="@Anpero.StringHelpper.GetCategoryLink(chidItem.Name, chidItem.Id)"><span>@chidItem.Name</span></a></li>
-                                    }
-                                </ul>
-                            </li>
-                        }
-                    }
-                }
-            </ul>
-        </li>
-        @if(commonInfo.ProductGroupList!=null && commonInfo.ProductGroupList.Length > 0)
+        @if (commonInfo.MenuList != null && commonInfo.MenuList.Length > 0)
         {
-            <li>
-                <a href="/search?category=0&keyword=">Phòng</a>
-                <ul>
-                    @foreach (var item in commonInfo.ProductGroupList)
+            foreach (var item in commonInfo.MenuList)
+            {
+                <li>
+                    <a href="@item.Link"><span>@item.Tittle</span></a>
+                    @if (item.ChidMenu.Length > 0)
                     {
-                        <li><a href="@Anpero.StringHelpper.GetProductGroupLink(item.Name, item.Id)"><span>@item.Name</span></a></li>
-                    }
-                </ul>
-
-            </li>
-        }
-        @if (ViewData["saleProduct"] != null)
-        {
-            AnperoFrontend.WebService.ProductItem[] saleProduct = (AnperoFrontend.WebService.ProductItem[])ViewData["saleProduct"];
-            <li>
-                <a href="#">Sản phẩm khuyến mại</a>
-                @if (saleProduct != null && saleProduct.Length > 0)
-                {
-                    <ul>
-                        @for (int i = 0; i < saleProduct.Length; i++)
-                        {
-                            if ( i < 4)
+                        <ul>
+                            @foreach (var childItem in item.ChidMenu)
                             {
-                                <li><a href="@Anpero.StringHelpper.GetProductLink(saleProduct[i].PrName, saleProduct[i].Id)">@saleProduct[i].PrName</a></li>
+                                <li>
+                                    <a href="@childItem.Link"><span>@childItem.Tittle</span></a>
+                                </li>
                             }
-                        }
-                    </ul>
-                }
-            </li>
+
+                        </ul>
+                    }
+                </li>
+            }
         }
-        <li>
-            <a href="/blog">Tin tức</a>
-            <ul>
-                <li><a href="/blog">Blogs</a></li>
-                <li><a href="/chinh-sach-van-chuyen-a86">Vận chuyển</a></li>
-                <li><a href="/chinh-sach-doi-tra-hang-tai-ngonlan-a84">Chính sách đổi trả</a></li>
-                <li><a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">Hướng dẫn thanh toán</a></li>
-            </ul>
-        </li>
-        <li><a href="/home/contact">Liên hệ</a></li>
+
+
     </ul>
 </div>
 @*<div class="popup1" style="display: block;">
 
-    <div class="newsletter-sign-box">
-        <div class="newsletter">
-            <img src="/assets/images/close-icon.png" alt="close" class="x" onClick="HideMe();">
-            <div class="newsletter_img">
-                <img alt="newsletter" src="/assets/images/newsletter_img.png">
-            </div>
-            <form method="post" id="popup-newsletter" name="popup-newsletter" class="email-form">
-                <h3>Nhận thông tin khuyến mại</h3>
+        <div class="newsletter-sign-box">
+            <div class="newsletter">
+                <img src="/assets/images/close-icon.png" alt="close" class="x" onClick="HideMe();">
+                <div class="newsletter_img">
+                    <img alt="newsletter" src="/assets/images/newsletter_img.png">
+                </div>
+                <form method="post" id="popup-newsletter" name="popup-newsletter" class="email-form">
+                    <h3>Nhận thông tin khuyến mại</h3>
 
-                <h4>Nhập địa chỉ email của bạn để nhận thông tin khuyến mại của chúng tôi.</h4>
-                <div class="newsletter-form">
-                    <div class="input-box">
-                        <input type="text" name="email" id="newsletter2" title="Nhận thông tin khuyến mại" placeholder="Nhập địa chỉ email của bạn..." class="input-text required-entry validate-email">
-                        <button type="submit" title="Đăng ký" class="button subscribe"><span>Đăng ký</span></button>
+                    <h4>Nhập địa chỉ email của bạn để nhận thông tin khuyến mại của chúng tôi.</h4>
+                    <div class="newsletter-form">
+                        <div class="input-box">
+                            <input type="text" name="email" id="newsletter2" title="Nhận thông tin khuyến mại" placeholder="Nhập địa chỉ email của bạn..." class="input-text required-entry validate-email">
+                            <button type="submit" title="Đăng ký" class="button subscribe"><span>Đăng ký</span></button>
 
-                    </div> <!--input-box-->
-                </div> <!--newsletter-form-->
-                <label class="subscribe-bottom"><input type="checkbox" name="notshowpopup" id="notshowpopup">Don’t show this popup again</label>
-            </form>
+                        </div> <!--input-box-->
+                    </div> <!--newsletter-form-->
+                    <label class="subscribe-bottom"><input type="checkbox" name="notshowpopup" id="notshowpopup">Don’t show this popup again</label>
+                </form>
 
-        </div> <!--newsletter-->
-    </div> <!--newsletter-sign-box-->
-</div>*@
+            </div> <!--newsletter-->
+        </div> <!--newsletter-sign-box-->
+    </div>*@
 @*<div id="fade" style="display: block;"></div>*@
 <div id="fb-root"></div>
 <script>
@@ -276,5 +224,5 @@
         js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.9";
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
-   
+
 </script>
