--- a/12_Shop_MultiProduct/Views/Shared/_partial/_HeaderPartial.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_partial/_HeaderPartial.cshtml
@@ -44,7 +44,7 @@
                     </div>
                     <ul class="search-notice">
                         <li class="title"><strong>Gợi ý từ khóa:</strong></li>
-                        <li><span>Bàn thờ ,đồ thờ ,bàn ghế ...</span></li>
+                        <li><span>Tìm có dấu, không dấu đều được ...</span></li>
                     </ul>
                 </div>
 
@@ -80,7 +80,7 @@
                         <span>Trang chủ</span>
                     </a>
                 </li>
-                <li class="li-child">
+                @*<li class="li-child">
                     <a href="#" title="" class="">
                         <span>Sản phẩm</span> <i class="fa fa-angle-down" aria-hidden="true"></i>
                     </a>
@@ -119,7 +119,7 @@
                             }
                         }
                     </ul>
-                </li>
+                </li>*@
                 @if (commonInfo.MenuList != null && commonInfo.MenuList.Length > 0)
                 {
                     foreach (var item in commonInfo.MenuList)
