--- a/12.2_not13_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/12.2_not13_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -76,7 +76,7 @@
                                 @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                                 {
                                     <li>
-                                        <a href="commonInfo.FaceBookLink" target="_blank">Fanpage</a>
+                                        <a href="@commonInfo.FaceBookLink" target="_blank">Fanpage</a>
                                     </li>
                                 }
 
