--- a/14_8_CompanyInfo/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/14_8_CompanyInfo/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -112,8 +112,8 @@
                         </div>
                         <div class="footer-column">
                             <h4>Bản đồ </h4>
-                            <a href="https://goo.gl/maps/cPSqZaF8p319hVrZ8" target="_blank">
-                                <img src="https://cdn.anpero.com/images/43/82019/12019080200473089.png" style="width:100%" />
+                            <a href="https://goo.gl/maps/VpSpvNuka7cfeqYA6" target="_blank">
+                                <img src="//cdn.anpero.com/images/43/82019/12019082802554298.png" style="width:100%" />
                             </a>
                             @*<ul class="links">*@
 
