--- a/14_8_CompanyInfo/Views/Shared/_Layout.cshtml
+++ b/14_8_CompanyInfo/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
     @RenderSection("canonical", required: false)
+    <link href='/static/css' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <h1 id="heading1" style="display:none;">
@@ -47,7 +48,7 @@
     @Html.Raw(commonInfo.AnperoPlugin)
 
     @Html.Raw(commonInfo.PageScript)
-
+    
     <section class="contact-area section-padding section-relative" id="contact">
         <div class="section-bg"></div>
         <div class="container">
